--- a/index.html
+++ b/index.html
@@ -274,27 +274,85 @@
 
 <body>
     <div class="container">
-        <h1>しんおおさか整骨院<br>予約フォーム</h1>
+        <h1>占屋伊千夜<br>予約フォーム</h1>
         <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
+        <div class="label">電話番号※必須</div>
+        <input type="tel" id="phone" placeholder="電話番号を入力してください">
+
         <div class="label">ご来店回数※必須</div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">初診</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目〈30分〉</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降〈0分〉</button>
         </div>
 
         <div class="label">メニューをお選びください</div>
+        <div class="menu-sections">
+            <button type="button" onclick="showMenu('male')">おひとり様</button>
+            <button type="button" onclick="showMenu('female')">2名様</button>
+            <button type="button" onclick="showMenu('whitening')">3名様から</button>
+        </div>
+
         <div id="treatment-text" style="margin-bottom: 20px;"></div>
-        <div class="symptoms">
-            <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">目力チャージ4D</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">体幹軸リセット</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">吸引リフレッシュ</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">内臓チューニング</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">脳内クリーンアップ</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">EMS楽トレ</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">伝統鍼灸</button>
-            <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">美容鍼</button>
+
+        <div id="male" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆おひとり様◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">50分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">40分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">30分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">20分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">10分鑑定</button>
+            </div>
+            <div class="highlight-background">
+                <span class="highlight-text">オプション</span>
+            </div>
+            <div class="irradiations">
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">追加、延長</button>
+            </div>
+        </div>
+
+        <div id="female" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆2名様◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">50分ずつ計100分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">40分ずつ計80分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">30分ずつ計60分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">20分ずつ計40分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">10分ずつ計20分鑑定</button>
+            </div>
+            <div class="highlight-background">
+                <span class="highlight-text">オプション</span>
+            </div>
+            <div class="irradiations">
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">追加、延長</button>
+            </div>
+        </div>
+        <div id="whitening" class="menu-section">
+            <div class="highlight-background">
+                <span class="highlight-text">◆3名様◆</span>
+            </div>
+            <div class="symptoms">
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">3名様から50分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">3名様から40分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="15000">3名様から30分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">3名様から20分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="15000">3名様から10分鑑定</button>
+            </div>
+            <div class="highlight-background">
+                <span class="highlight-text">オプション</span>
+            </div>
+            <div class="irradiations">
+                <button type="button" id="firstirradiations" onclick="selectirradiations(this)"
+                    data-price="15000">追加、延長、団体料金など</button>
+            </div>
         </div>
 
         <div class="label">希望日時</div>
@@ -328,7 +386,7 @@
             </div>
         </div>
 
-        <div class="label">メッセージ<br>（身体のお悩みなどがあればご自由にご記載ください）</div>
+        <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="label">ご予約内容</div>
@@ -363,28 +421,36 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '初診': 20,
-            '2回目以降': 0
+            '1回目〈30分〉': 0,
+            '2回目以降〈0分〉': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '美白パック〈30分〉': 0
+            '追加、延長': 10,
+            '追加、延長、団体料金など': 10
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            '目力チャージ4D': 15,
-            '体幹軸リセット': 20,
-            '吸引リフレッシュ': 20,
-            '内臓チューニング': 20,
-            '脳内クリーンアップ': 20,
-            'EMS楽トレ': 20,
-            '伝統鍼灸': 20,
-            '美容鍼': 20
+            '50分鑑定': 60,
+            '40分鑑定': 50,
+            '30分鑑定': 40,
+            '20分鑑定': 30,
+            '10分鑑定': 20,
+            '50分ずつ計100分鑑定': 30,
+            '40分ずつ計80分鑑定': 60,
+            '30分ずつ計60分鑑定': 120,
+            '20分ずつ計40分鑑定': 30,
+            '10分ずつ計20分鑑定': 60,
+            '3名様から50分鑑定': 30,
+            '3名様から40分鑑定': 30,
+            '3名様から30分鑑定': 60,
+            '3名様から20分鑑定': 120,
+            '3名様から10分鑑定': 30
         };
 
 
@@ -426,7 +492,13 @@
         <hr>
         <p>${selectedSymptomText}</p>
         <hr>
+        <p>${irradiationsText}</p>
+        <hr>
+        <p>${totalTimeText}</p>
+        <hr>
         <p>${selectedDateText}</p>
+        <hr>
+        <p>${totalAmountText}</p>
         <hr>
     `;
         }
@@ -487,21 +559,23 @@
             const treatmentText = document.getElementById('treatment-text');
 
             if (treatmentId === 'treatment1') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：10分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：90分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：6,500円<br>初診料：＋2,200円</strong></div>`;
             } else if (treatmentId === 'treatment2') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong</div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：60分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：4,500円<br>初診料：＋2,200円</strong></div>`;
             } else if (treatmentId === 'treatment3') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：120分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：8,700円<br>初診料：＋2,200円</strong></div>`;
             } else if (treatmentId === 'treatment4') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：30分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円<br>初診料：＋2,200円</strong></div>`;
             } else if (treatmentId === 'treatment5') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：60分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：6,500円</strong></div>`;
             } else if (treatmentId === 'treatment6') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：30分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：4,500円</strong></div>`;
             } else if (treatmentId === 'treatment7') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：90分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：8,700円</strong></div>`;
             } else if (treatmentId === 'treatment8') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：15分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円</strong></div>`;
+            } else if (treatmentId === 'treatment9') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：15分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円</strong></div>`;
             } else {
                 treatmentText.innerHTML = '';
             }
@@ -570,6 +644,39 @@
             fetchAvailability(currentDate);
         }
 
+        function showMenu(menu) {
+            // すべてのメニューボタンの選択状態をリセット
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                button.classList.remove('active');
+            });
+
+            // 選択されたメニューセクションを表示
+            document.querySelectorAll('.menu-section').forEach(section => {
+                section.classList.remove('active');
+                section.querySelectorAll('button').forEach(btn => btn.classList.remove('active'));
+            });
+
+            // 対応するメニューボタンを選択状態にする
+            document.querySelectorAll('.menu-sections button').forEach(button => {
+                if (button.getAttribute('onclick') === `showMenu('${menu}')`) {
+                    button.classList.add('active');
+                }
+            });
+
+            // 選択されたメニューセクションを表示
+            document.getElementById(menu).classList.add('active');
+
+            // メニューとオプションをリセット
+            selectedSymptom = '';      // メニューのリセット
+            irradiationsCount = '';    // オプションのリセット
+            menuPrice = 0;             // メニューの価格リセット
+            optionsPrice = 0;          // オプションの価格リセット
+            totalAmount = 0;           // 合計金額リセット
+
+            // 表示を更新
+            updateDisplayInfo();
+        }
+
         function selectDate(cell) {
             // "unavailable" クラスが付いている場合はクリックを無効化
             if (cell.classList.contains('unavailable')) {
@@ -595,9 +702,10 @@
             updateDisplayInfo();
         }
 
-function submitForm() {
+        function submitForm() {
     const formData = {
         name: document.getElementById('name').value.trim(),
+        phone: document.getElementById('phone').value.trim(),
         visitCount: visitCount,
         selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
         irradiationsCount: irradiationsCount,
@@ -611,6 +719,11 @@ function submitForm() {
         return;
     }
 
+    if (!formData.phone) {
+        alert('電話番号を入力してください。');
+        return;
+    }
+
     if (!formData.selectedSymptom) {
         alert('メニューを選択してください。');
         return;
@@ -619,7 +732,7 @@ function submitForm() {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.visitCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
@@ -684,7 +797,6 @@ function submitForm() {
             const table = calendar.querySelector('table tbody');
 
             const times = [
-    '09:00', '09:15', '09:30', '09:45',
     '10:00', '10:15', '10:30', '10:45',
     '11:00', '11:15', '11:30', '11:45',
     '12:00', '12:15', '12:30', '12:45',
@@ -695,7 +807,14 @@ function submitForm() {
     '17:00', '17:15', '17:30', '17:45',
     '18:00', '18:15', '18:30', '18:45',
     '19:00', '19:15', '19:30', '19:45',
-    '20:00'
+    '20:00', '20:15', '20:30', '20:45',
+    '21:00', '21:15', '21:30', '21:45',
+    '22:00', '22:15', '22:30', '22:45',
+    '23:00', '23:15', '23:30', '23:45',
+    '00:00', '00:15', '00:30', '00:45',
+    '01:00', '01:15', '01:30', '01:45',
+    '02:00', '02:15', '02:30', '02:45',
+    '03:00'
 ];
 
             if (table.rows.length === 0) {
@@ -765,21 +884,16 @@ function submitForm() {
                     // メニュー時間と訪問回数の時間を合計して、終了時間を設定
                     slotEnd.setMinutes(slotStart.getMinutes() + menuDuration + visitDuration + irradiationsDuration);
 
-// 月・火・木・金は20:00以降、水・土は12:30以降を営業時間外とする条件
-const dayOfWeek = slotStart.getDay();
-const eveningLimitWeekdays = new Date(day);  // 新しいDateオブジェクトを使用
-eveningLimitWeekdays.setHours(20, 0); // 月・火・木・金の20:00
-const afternoonLimitWedSat = new Date(day);  // 新しいDateオブジェクトを使用
-afternoonLimitWedSat.setHours(12, 30); // 水・土の12:30
-
-if (
-    (dayOfWeek === 1 || dayOfWeek === 2 || dayOfWeek === 4 || dayOfWeek === 5) && slotEnd > eveningLimitWeekdays ||  // 月・火・木・金
-    (dayOfWeek === 3 || dayOfWeek === 6) && slotEnd > afternoonLimitWedSat  // 水・土
-) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-    continue;
-}
+                    // 18時以降に終了する予約を不可にする (17:30は可)
+                    if (slotEnd.getHours() === 18 && slotEnd.getMinutes() > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    } else if (slotEnd.getHours() > 18) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
 
                     // ここで終了時間を使った条件処理を行う
                     // 例えば、リアルタイムで既に過ぎた時間帯は×にする
@@ -824,12 +938,6 @@ if (
                         cell.textContent = '✕';
                         cell.classList.add('unavailable');
                     }
-// 月・火・木・金の09:00~10:59は✕にする（優先的にチェック）
-if ((slotStart.getDay() === 1 || slotStart.getDay() === 2 || slotStart.getDay() === 4 || slotStart.getDay() === 5) &&
-    slotStart.getHours() >= 9 && slotStart.getHours() <= 10) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-}
                     // 日曜日で、営業日ではない場合
                     else if (slotStart.getDay() === 0 && !isBusinessDay && businessEventTimes.length === 0) {
                         cell.textContent = '✕';
@@ -854,8 +962,8 @@ if ((slotStart.getDay() === 1 || slotStart.getDay() === 2 || slotStart.getDay() 
 
                 // ×と×の間のセル数が3未満の場合、その間のセルを×にする部分の後に以下を追加
                 for (let i = 0; i < 7; i++) {
-                    const twentyOClockRow = times.indexOf('19:45');
-                    const twentyOneOClockRow = times.indexOf('20:00');
+                    const twentyOClockRow = times.indexOf('17:30');
+                    const twentyOneOClockRow = times.indexOf('18:00');
 
                     for (let j = twentyOClockRow; j < times.length; j++) {
                         const cell = table.rows[j].cells[i + 1];
