--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@
 
         <div class="label">ご来店回数※必須</div>
         <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目〈30分〉</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降〈0分〉</button>
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">1回目</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
         <div class="label">メニューをお選びください</div>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">おひとり様</button>
+            <button type="button" onclick="showMenu('male')">1名様</button>
             <button type="button" onclick="showMenu('female')">2名様</button>
             <button type="button" onclick="showMenu('whitening')">3名様から</button>
         </div>
@@ -298,14 +298,14 @@
 
         <div id="male" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆おひとり様◆</span>
+                <span class="highlight-text">◆1名様◆</span>
             </div>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">50分鑑定</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">40分鑑定</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">30分鑑定</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">20分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment4')" data-price="15000">10分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">10分鑑定</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
@@ -321,11 +321,11 @@
                 <span class="highlight-text">◆2名様◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">50分ずつ計100分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">40分ずつ計80分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">30分ずつ計60分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">20分ずつ計40分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">10分ずつ計20分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">50分ずつ計100分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">40分ずつ計80分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">30分ずつ計60分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">20分ずつ計40分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="15000">10分ずつ計20分鑑定</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
@@ -337,14 +337,14 @@
         </div>
         <div id="whitening" class="menu-section">
             <div class="highlight-background">
-                <span class="highlight-text">◆3名様◆</span>
+                <span class="highlight-text">◆3名様から◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">3名様から50分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">3名様から40分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="15000">3名様から30分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">3名様から20分鑑定</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="15000">3名様から10分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment11')" data-price="15000">3名様から50分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment12')" data-price="15000">3名様から40分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment13')" data-price="15000">3名様から30分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment14')" data-price="15000">3名様から20分鑑定</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment15')" data-price="15000">3名様から10分鑑定</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
@@ -421,8 +421,8 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目〈30分〉': 0,
-            '2回目以降〈0分〉': 0
+            '1回目': 0,
+            '2回目以降': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
@@ -494,11 +494,7 @@
         <hr>
         <p>${irradiationsText}</p>
         <hr>
-        <p>${totalTimeText}</p>
-        <hr>
         <p>${selectedDateText}</p>
-        <hr>
-        <p>${totalAmountText}</p>
         <hr>
     `;
         }
@@ -559,23 +555,35 @@
             const treatmentText = document.getElementById('treatment-text');
 
             if (treatmentId === 'treatment1') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：90分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：6,500円<br>初診料：＋2,200円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">1名様：50分鑑定</div><div style="text-align: right;"><strong>料金：5,500円</strong></div>`;
             } else if (treatmentId === 'treatment2') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：60分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：4,500円<br>初診料：＋2,200円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">1名様：40分鑑定</div><div style="text-align: right;"><strong>料金：4,500円</strong></div>`;
             } else if (treatmentId === 'treatment3') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：120分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：8,700円<br>初診料：＋2,200円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">1名様：30分鑑定</div><div style="text-align: right;"><strong>料金：3,500円</strong></div>`;
             } else if (treatmentId === 'treatment4') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：30分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円<br>初診料：＋2,200円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">1名様：20分鑑定</div><div style="text-align: right;"><strong>料金：2,500円</strong></div>`;
             } else if (treatmentId === 'treatment5') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：60分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：6,500円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">1名様：10分鑑定</div><div style="text-align: right;"><strong>料金：1,500円</strong></div>`;
             } else if (treatmentId === 'treatment6') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：30分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：4,500円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">2名様：50分ずつ計100分鑑定</div><div style="text-align: right;"><strong>料金：11,000円</strong></div>`;
             } else if (treatmentId === 'treatment7') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：90分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：8,700円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">2名様：40分ずつ計80分鑑定</div><div style="text-align: right;"><strong>料金：9,000円</strong></div>`;
             } else if (treatmentId === 'treatment8') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：15分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">2名様：30分ずつ計60分鑑定</div><div style="text-align: right;"><strong>料金：7,000円</strong></div>`;
             } else if (treatmentId === 'treatment9') {
-                treatmentText.innerHTML = `<div style="text-align: left;"><strong>所要時間：15分</strong><br>※症状によりお時間が前後する場合がございます</div><div style="text-align: right;"><strong>料金：1,700円</strong></div>`;
+                treatmentText.innerHTML = `<div style="text-align: left;">2名様：20分ずつ計40分鑑定</div><div style="text-align: right;"><strong>料金：5,000円</strong></div>`;
+            } else if (treatmentId === 'treatment10') {
+                treatmentText.innerHTML = `<div style="text-align: left;">2名様：10分ずつ計20分鑑定</div><div style="text-align: right;"><strong>料金：3,000円</strong></div>`;
+            } else if (treatmentId === 'treatment11') {
+                treatmentText.innerHTML = `<div style="text-align: left;">3名様から：3名様から50分鑑定</div><div style="text-align: right;"><strong>料金：5,500円</strong></div>`;
+            } else if (treatmentId === 'treatment12') {
+                treatmentText.innerHTML = `<div style="text-align: left;">3名様から：3名様から40分鑑定</div><div style="text-align: right;"><strong>料金：4,500円</strong></div>`;
+            } else if (treatmentId === 'treatment13') {
+                treatmentText.innerHTML = `<div style="text-align: left;">3名様から：3名様から30分鑑定</div><div style="text-align: right;"><strong>料金：3,500円</strong></div>`;
+            } else if (treatmentId === 'treatment14') {
+                treatmentText.innerHTML = `<div style="text-align: left;">3名様から：3名様から20分鑑定</div><div style="text-align: right;"><strong>料金：2,500円</strong></div>`;
+            } else if (treatmentId === 'treatment15') {
+                treatmentText.innerHTML = `<div style="text-align: left;">3名様から：3名様から10分鑑定</div><div style="text-align: right;"><strong>料金：1,500円</strong></div>`;
             } else {
                 treatmentText.innerHTML = '';
             }
