--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             };
 
             // フォームデータのチェック
-            if (!formData.name || !formData.phone || !formData.selectedSymptom) {
+            if (!formData.name || !formData.phone) {
                 alert('お名前・電話番号・メニューすべてご記入ください。');
                 return;
             }
@@ -486,7 +486,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message2}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('担当より折返しの電話でご予約完了となりますので予めご了承下さい。');
