--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n予約：仮予約\nお迎え先：\n ${formData.message}\nお帰り先：\n ${formData.message1}\nメッセージ：${formData.message2}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n予約：仮予約\nお迎え先：\n ${formData.message}\nお帰り先：\n ${formData.message1}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message2}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('担当より折返しの電話でご予約完了となりますので予めご了承下さい。');
