--- a/index.html
+++ b/index.html
@@ -287,9 +287,6 @@
         <div class="label">お帰り先(必須)<br>お帰りの先の施設名や住所をご入力下さい。<br>※場所の詳細がわからない場合は未定とご入力下さい。</div>
         <textarea id="message3" rows="4" placeholder="お帰りの先の施設名や住所をご入力下さい。"></textarea>
 
-        <div class="label">その他ご質問、ご要望などございましたらご記入ください。</div>
-        <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
-
         <div class="label">希望日時</div>
         <div class="calendar-container">
             <div class="week-button-container">
@@ -486,7 +483,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n予約：仮予約\nお迎え先：\n ${formData.message}\nお帰り先：\n ${formData.message1}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message2}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n予約：仮予約\nお迎え先：\n ${formData.message2}\nお帰り先：\n ${formData.message3}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('担当より折返しの電話でご予約完了となりますので予めご了承下さい。');
