--- a/index.html
+++ b/index.html
@@ -483,13 +483,19 @@
         return;
     }
 
+    // フォームデータのチェック
+    if (!formData.formData.dates[0]) {
+        alert('希望日時を入力してください。');
+        return;
+    }
+
     if (!formData.message2) {
         alert('お迎え先を選択してください。');
         return;
     }
 
-    if (!formData.お帰り先) {
-        alert('メニューを選択してください。');
+    if (!formData.message3) {
+        alert('お帰り先を選択してください。');
         return;
     }
 
