--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
     }
 
     // フォームデータのチェック
-    if (!formData.formData.dates[0]) {
+    if (!formData.formData.dates) {
         alert('希望日時を入力してください。');
         return;
     }
