--- a/index.html
+++ b/index.html
@@ -488,6 +488,16 @@
         return;
     }
 
+    if (!formData.message3) {
+        alert('お帰り先を選択してください。');
+        return;
+    }
+
+    if (!formData.dates[0]) {
+        alert('希望時間を選択してください。');
+        return;
+    }
+
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
