--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #005ea6;
+            background-color: #158acf;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -106,7 +106,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #ff4c4c;
+            background-color: #158acf;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -274,18 +274,18 @@
 
 <body>
     <div class="container">
-        <h1>南星運転代行<br>予約フォーム</h1>
-        <div class="label">お客様名※必須</div>
+        <h1>俺婚<br>≪ご新規様≫<br>予約フォーム</h1>
+        <div class="label">お客様名</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
-        <div class="label">電話番号※必須</div>
+        <div class="label">電話番号</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <div class="label">お迎え先(必須)<br>※駐車場が未定の場合は、未定とご入力下さい。</div>
-        <textarea id="message2" rows="4" placeholder="お迎え先の施設名や住所をご入力下さい。"></textarea>
-
-        <div class="label">お帰り先(必須)<br>お帰りの先の施設名や住所をご入力下さい。<br>※場所の詳細がわからない場合は未定とご入力下さい。</div>
-        <textarea id="message3" rows="4" placeholder="お帰りの先の施設名や住所をご入力下さい。"></textarea>
+        <div class="label">メニューをお選びください</div>
+        <div id="treatment-text" style="margin-bottom: 20px;"></div>
+        <div class="symptoms">
+            <button type="button" onclick="selectSymptom(this)" data-price="15000">ご面談</button>
+        </div>
 
         <div class="label">希望日時</div>
         <div class="calendar-container">
@@ -318,17 +318,26 @@
             </div>
         </div>
 
-        <div class="label">その他ご質問、ご要望などございましたらご記入ください。</div>
+        <div class="label">メッセージ<br>（身体のお悩みなどがあればご自由にご記載ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
+
+        <div class="label">ご予約内容</div>
+        <div id="displayInfo"></div> <!-- ここに選択された情報を表示します -->
 
         <button class="submit-button" onclick="submitForm()">予約を行う</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
+        let visitCount = '';
+        let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
         let availabilityCache = {};
+        let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
+        let totalAmount = 0; // 合計金額を格納する変数
+        let menuPrice = 0; // メニューの価格
+        let optionsPrice = 0; // オプションの合計価格
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
@@ -344,7 +353,8 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '2回目以降〈0分〉': 0
+            '初診': 0,
+            '2回目以降': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
@@ -357,7 +367,7 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'スピードコース〈90分〉': 0
+            'ご面談': 0
         };
 
 
@@ -395,23 +405,14 @@
             document.getElementById('displayInfo').innerHTML = `
         <p>・<span style="color:red;"><strong>お名前</strong></span>：${name}</p>
         <hr>
-        <p>${visitCountText}</p>
-        <hr>
         <p>${selectedSymptomText}</p>
         <hr>
-        <p>${irradiationsText}</p>
-        <hr>
-        <p>${totalTimeText}</p>
-        <hr>
         <p>${selectedDateText}</p>
-        <hr>
-        <p>${totalAmountText}</p>
         <hr>
     `;
         }
 
         // 各ボタンや入力フィールドでupdateDisplayInfoを呼び出すようにする
-        document.getElementById('name').addEventListener('input', updateDisplayInfo);
         document.getElementById('name').addEventListener('input', updateDisplayInfo);
         document.querySelectorAll('.visit-buttons button').forEach(button => {
             button.addEventListener('click', updateDisplayInfo);
@@ -432,88 +433,167 @@
             });
         });
 
+        function selectSymptom(button, treatmentId) {
+            // ボタンの選択状態を切り替える
+            button.classList.toggle('active');
+
+            // 選択されたオプションを取得
+            const updatedSelectedButtons = document.querySelectorAll('.symptoms button.active');
+
+            if (updatedSelectedButtons.length === 0) {
+                // すべてのボタンの選択が解除された場合、メニュー時間を0にリセット
+                selectedMenuTime = 0;
+                selectedSymptom = null; // 選択されたメニューをリセット
+                menuPrice = 0; // メニュー価格をリセット
+            } else {
+                // 1つだけ選択状態にする
+                if (updatedSelectedButtons.length > 1) {
+                    updatedSelectedButtons.forEach(btn => btn.classList.remove('active'));
+                    button.classList.add('active'); // クリックしたボタンだけを選択
+                }
+
+                // 選択されたメニューの時間を取得して保存
+                const selectedMenu = button.textContent;
+                selectedMenuTime = menuTimes[selectedMenu] || 0; // メニュー時間を取得して保存
+                selectedSymptom = [selectedMenu]; // 選択されたメニュー名を配列として保存
+                menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+            }
+
+            console.log('選択されたメニューの時間:', selectedMenuTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+
+            // トリートメントテキストを表示
+            const treatmentText = document.getElementById('treatment-text');
+
+            if (treatmentId === 'treatment1') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：10分</strong></div>`;
+            } else if (treatmentId === 'treatment2') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong</div>`;
+            } else if (treatmentId === 'treatment3') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+            } else if (treatmentId === 'treatment4') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+            } else if (treatmentId === 'treatment5') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+            } else if (treatmentId === 'treatment6') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+            } else if (treatmentId === 'treatment7') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+            } else if (treatmentId === 'treatment8') {
+                treatmentText.innerHTML = `<div style="text-align: left;"><strong>施術時間：15分</strong></div>`;
+            } else {
+                treatmentText.innerHTML = '';
+            }
+
+            // 選択されたメニューの名前と価格を取得
+            const symptomName = button.textContent;  // ボタンのテキストを取得
+            selectedSymptom = [symptomName];  // 選択されたメニュー名を配列として保存
+            menuPrice = parseInt(button.getAttribute('data-price'), 10) || 0;  // メニューの価格を取得
+
+            // 表示を更新
+            updateDisplayInfo();
+        }
+
+        function selectirradiations(button) {
+            // ボタンの選択状態を切り替える
+            button.classList.toggle('active');
+
+            // 選択されたオプションを取得
+            const selectedButtons = document.querySelectorAll('.irradiations button.active');
+            const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
+            irradiationsCount = selectedIrradiations.join(', ');
+
+            // すべてのオプションの価格を再計算
+            optionsPrice = 0; // 全体をリセットして再計算
+            let totalirradiationsTime = 0; // 選択されたすべてのオプションの合計時間
+            selectedButtons.forEach(btn => {
+                const price = parseInt(btn.getAttribute('data-price'), 10);
+                optionsPrice += price;
+
+                // 各オプションの時間を加算
+                const irradiationName = btn.innerText;
+                const irradiationTime = irradiationsTimes[irradiationName] || 0;
+                totalirradiationsTime += irradiationTime;
+            });
+
+            // selectedirradiationsTimeに合計時間を設定
+            selectedirradiationsTime = totalirradiationsTime;
+
+            console.log('選択されたオプションの合計時間:', selectedirradiationsTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+
+            // 表示を更新
+            updateDisplayInfo();
+        }
+
+
         function updateTotalAmount() {
             totalAmount = menuPrice + optionsPrice; // オプションの価格も含める
             updateDisplayInfo(); // 表示を更新
         }
 
+        function selectVisit(element) {
+            document.getElementById('firstVisit').classList.remove('active');
+            document.getElementById('repeatVisit').classList.remove('active');
+            element.classList.add('active');
+            visitCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedVisitTime = visitTimes[visitCount];
+
+            console.log('選択された訪問回数の時間:', selectedVisitTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
         function selectDate(cell) {
-    // "unavailable" クラスが付いている場合はクリックを無効化
-    if (cell.classList.contains('unavailable')) {
-        return; // 何もせずに終了
-    }
+            // "unavailable" クラスが付いている場合はクリックを無効化
+            if (cell.classList.contains('unavailable')) {
+                return; // 何もせずに終了
+            }
 
-    // 既に選択されているセルの選択を解除
-    const cells = document.querySelectorAll('.calendar td');
-    cells.forEach(td => td.classList.remove('selected'));
+            // 既に選択されているセルの選択を解除
+            const cells = document.querySelectorAll('.calendar td');
+            cells.forEach(td => td.classList.remove('selected'));
 
-    // 新しいセルを選択状態にする
-    cell.classList.add('selected');
+            // 新しいセルを選択状態にする
+            cell.classList.add('selected');
 
-    // 選択された日付と時間を取得
-    const selectedDay = cell.getAttribute('data-date'); // ISO形式の日付
-    const selectedTime = cell.parentElement.firstChild.textContent; // 時間
-    const date = new Date(selectedDay);
+            // 選択された日付と時間を取得
+            const selectedDay = cell.getAttribute('data-date'); // ISO形式の日付
+            const selectedTime = cell.parentElement.firstChild.textContent; // 時間
+            const date = new Date(selectedDay);
 
-    // 時間部分を調整 (0時～2時は25時形式に変更)
-    const timeParts = selectedTime.split(':');
-    let hour = parseInt(timeParts[0], 10);
-    const minute = timeParts[1];
+            // 日付部分を「○○年○○月○○日 ○○:○○」形式に変換
+            selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
 
-    if (hour >= 0 && hour <= 2) {
-        hour += 24; // 25時, 26時に変換
-    }
-
-    // 日付部分を「○○年○○月○○日 25:○○」形式に変換
-    selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${hour}:${minute}`;
-
-    // 希望日時を即座に更新
-    updateDisplayInfo();
-}
+            // 希望日時を即座に更新
+            updateDisplayInfo();
+        }
 
         function submitForm() {
             const formData = {
                 name: document.getElementById('name').value,
                 phone: document.getElementById('phone').value,
+                visitCount: visitCount,
+                selectedSymptom: selectedSymptom,
+                irradiationsCount: irradiationsCount,
                 dates: [selectedFullDate],
-                message: document.getElementById('message').value,
-                message2: document.getElementById('message2').value,
-                message3: document.getElementById('message3').value
+                message: document.getElementById('message').value
             };
-
-    // フォームデータのチェック
-    if (!formData.name) {
-        alert('お名前を入力してください。');
-        return;
-    }
-
-    if (!formData.phone) {
-        alert('電話番号を入力してください。');
-        return;
-    }
-
-    if (!formData.message2) {
-        alert('お迎え先を選択してください。');
-        return;
-    }
-
-    if (!formData.message3) {
-        alert('お帰り先を選択してください。');
-        return;
-    }
-
-    if (!formData.dates[0]) {
-        alert('希望時間を選択してください。');
-        return;
-    }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n予約：仮予約\nお迎え先：\n ${formData.message2}\nお帰り先：\n ${formData.message3}\n希望日時：\n ${formData.dates[0]}\nメッセージ：\n${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
-                alert('担当より折返しの電話でご予約完了となりますので予めご了承下さい。');
+                alert('当日キャンセルは無いようにお願いいたします。キャンセル料発生いたします。');
                 /* LIFFウィンドウを閉じる */
                 liff.closeWindow();
             }).catch((err) => {
@@ -575,16 +655,12 @@
             const table = calendar.querySelector('table tbody');
 
             const times = [
-    '18:00', '18:15', '18:30', '18:45',
-    '19:00', '19:15', '19:30', '19:45',
-    '20:00', '20:15', '20:30', '20:45',
-    '21:00', '21:15', '21:30', '21:45',
-    '22:00', '22:15', '22:30', '22:45',
-    '23:00', '23:15', '23:30', '23:45',
-    '00:00', '00:15', '00:30', '00:45',
-    '01:00', '01:15', '01:30', '01:45',
-    '02:00'
+    '10:00', '11:00', '12:00', '13:00', 
+    '14:00', '15:00', '16:00', '17:00', 
+    '18:00', '19:00', '20:00', '21:00', 
+    '22:00', '23:00'
 ];
+
 
             if (table.rows.length === 0) {
                 for (const time of times) {
@@ -646,35 +722,36 @@
                     slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]), 0, 0);
 
                     const slotEnd = new Date(slotStart);
-                    let menuDuration = selectedMenuTime || 10;
+                    let menuDuration = selectedMenuTime || 30;
                     let visitDuration = selectedVisitTime || 0;
                     let irradiationsDuration = selectedirradiationsTime || 0;
 
                     // メニュー時間と訪問回数の時間を合計して、終了時間を設定
                     slotEnd.setMinutes(slotStart.getMinutes() + menuDuration + visitDuration + irradiationsDuration);
 
-// 深夜3時から4時に終了する予約を不可にする
-if (slotEnd.getHours() === 3 && slotEnd.getMinutes() > 0) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-    continue;
-} else if (slotEnd.getHours() > 3 && slotEnd.getHours() < 9) {
+// 月・火・木・金は20:00以降、水・土は12:30以降を営業時間外とする条件
+const dayOfWeek = slotStart.getDay();
+const eveningLimitWeekdays = new Date(day);  // 新しいDateオブジェクトを使用
+eveningLimitWeekdays.setHours(23, 50); // 月・火・木・金の20:00
+const afternoonLimitWedSat = new Date(day);  // 新しいDateオブジェクトを使用
+afternoonLimitWedSat.setHours(21, 00); // 水・土の12:30
+
+if (
+    (dayOfWeek === 1 || dayOfWeek === 2 || dayOfWeek === 4 || dayOfWeek === 5 || dayOfWeek === 3) && slotEnd > eveningLimitWeekdays ||  // 月・火・木・金
+    (dayOfWeek === 0 || dayOfWeek === 6) && slotEnd > afternoonLimitWedSat  // 水・土
+) {
     cell.textContent = '✕';
     cell.classList.add('unavailable');
     continue;
 }
 
-        // 現在の時刻が深夜時間帯の場合（0時～2時）、過ぎた時間を×に設定
-        if (now.getHours() >= 0 && now.getHours() < 3) {
-            if (
-                slotStart.toDateString() === now.toDateString() &&
-                slotStart.getHours() < now.getHours()
-            ) {
-                cell.textContent = '✕';
-                cell.classList.add('unavailable');
-                continue;
-            }
-        }
+                    // ここで終了時間を使った条件処理を行う
+                    // 例えば、リアルタイムで既に過ぎた時間帯は×にする
+                    if (slotStart < now) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                        continue;
+                    }
 
                     const isBusinessDay = businessDays.some(businessDay => {
                         const businessDayStart = new Date(businessDay.start);
@@ -696,50 +773,45 @@ if (slotEnd.getHours() === 3 && slotEnd.getMinutes() > 0) {
                         return acc;
                     }, 0);
 
-// 営業日のイベント時間内に他のイベントが3つ以上ある場合
-if (isBusinessEventTime && count >= 3) {
+                    // 営業日のイベント時間内に他のイベントがある場合
+                    if (isBusinessEventTime && count > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
+                    // 営業日のイベント時間（他のイベントがない場合）
+                    else if (isBusinessEventTime) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    // 営業日で、指定されている時間以外の時間は×
+                    else if (businessEventTimes.length > 0) {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
+// 月・火・木・金の09:00~10:59は✕にする（優先的にチェック）
+if ((slotStart.getDay() === 6 || slotStart.getDay() === 0) &&
+    slotStart.getHours() >= 22 && slotStart.getHours() <= 23) {
     cell.textContent = '✕';
     cell.classList.add('unavailable');
 }
-// 営業日のイベント時間内に他のイベントが1～2つある場合
-else if (isBusinessEventTime && count > 0) {
-    cell.textContent = '◯';
-    cell.classList.add('available');
-}
-// 営業日のイベント時間（他のイベントがない場合）
-else if (isBusinessEventTime) {
-    cell.textContent = '◯';
-    cell.classList.add('available');
-}
-// 営業日で、指定されている時間以外の時間は×
-else if (businessEventTimes.length > 0) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-}
-// 営業日でかつ他のイベントがない場合
-else if (isBusinessDay && count === 0) {
-    cell.textContent = '◯';
-    cell.classList.add('available');
-}
-// それ以外の条件：イベントが3つ以上の場合は✕
-else if (count >= 3) {
-    cell.textContent = '✕';
-    cell.classList.add('unavailable');
-}
-// それ以外の条件：イベントが1～2個の場合は◯
-else if (count > 0) {
-    cell.textContent = '◯';
-    cell.classList.add('available');
-}
-// その他、イベントがない場合
-else {
-    cell.textContent = '◯';
-    cell.classList.add('available');
-}
+                    // 営業日でかつ他のイベントがない場合
+                    else if (isBusinessDay && count === 0) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    }
+                    // それ以外の条件
+                    else if (count === 0) {
+                        cell.textContent = '◯';
+                        cell.classList.add('available');
+                    } else {
+                        cell.textContent = '✕';
+                        cell.classList.add('unavailable');
+                    }
 
-cell.setAttribute('data-date', slotStart.toISOString());
+                    cell.setAttribute('data-date', slotStart.toISOString());
                 }
             }
+
         }
 
         function updateCalendarHeader(date) {
