--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 <body>
     <div class="container">
-        <h1>俺婚<br>≪ご新規様≫<br>予約フォーム</h1>
+        <h1>俺婚<br>≪リピーター様≫<br>予約フォーム</h1>
         <div class="label">お客様名</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
@@ -341,7 +341,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2006137975-XpgGkqgL'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -367,7 +367,7 @@
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'ご面談': 0
+            '美容鍼': 20
         };
 
 
@@ -587,6 +587,12 @@
                 message: document.getElementById('message').value
             };
 
+            // フォームデータのチェック
+            if (!formData.name) {
+                alert('お名前');
+                return;
+            }
+
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
@@ -622,7 +628,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbyJjFF16v_y5qndj5gJN5CXJO_hCRMxjfO7ykSsRoCu89VxkUz6a_yqM3ynLc1dT1jL/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbwCxnJaxGZ46c3TnnesuZcD_zuxuVoSHoDHo5MxkRzChcK5vZDwBs4HstzkXO-KLyuDYA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
